// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-messaging - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Troubleshoot and resolve issues with Azure Messaging SDKs for Event Hubs and Service Bus. Covers connection failures, authentication errors, message processing issues, and SDK configuration problems. WHEN: event hub SDK error, service bus SDK issue, messaging connection failure, AMQP error, event processor host issue, message lock lost, message lock expired, lock renewal, lock renewal batch, send timeout, receiver disconnected, SDK troubleshooting, azure messaging SDK, event hub consumer, service bus queue issue, topic subscription error, enable logging event hub, service bus logging, eventhub python, servicebus java, eventhub javascript, servicebus dotnet, event hub checkpoint, event hub not receiving messages, service bus dead letter, batch processing lock, session lock expired, idle timeout, connection inactive, link detach, slow reconnect, session error, duplicate events, offset reset, receive batch.",
  "extractedKeywords": [
    "amqp",
    "authentication",
    "azure",
    "batch",
    "checkpoint",
    "configuration",
    "connection",
    "consumer",
    "covers",
    "dead",
    "detach",
    "diagnostic",
    "disconnected",
    "dotnet",
    "duplicate",
    "enable",
    "error",
    "errors",
    "event",
    "eventhub",
    "events",
    "expired",
    "failure",
    "failures",
    "host",
    "hubs",
    "idle",
    "inactive",
    "issue",
    "issues",
    "java",
    "javascript",
    "letter",
    "link",
    "lock",
    "logging",
    "lost",
    "mcp",
    "message",
    "messages",
    "messaging",
    "monitor",
    "offset",
    "problems",
    "processing",
    "processor",
    "python",
    "queue",
    "receive",
    "receiver",
    "receiving",
    "reconnect",
    "renewal",
    "reset",
    "resolve",
    "sdks",
    "send",
    "service",
    "servicebus",
    "session",
    "slow",
    "subscription",
    "timeout",
    "topic",
    "troubleshoot",
    "troubleshooting",
    "when",
    "with",
  ],
  "name": "azure-messaging",
}
`;

exports[`azure-messaging - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "amqp",
  "authentication",
  "azure",
  "batch",
  "checkpoint",
  "configuration",
  "connection",
  "consumer",
  "covers",
  "dead",
  "detach",
  "diagnostic",
  "disconnected",
  "dotnet",
  "duplicate",
  "enable",
  "error",
  "errors",
  "event",
  "eventhub",
  "events",
  "expired",
  "failure",
  "failures",
  "host",
  "hubs",
  "idle",
  "inactive",
  "issue",
  "issues",
  "java",
  "javascript",
  "letter",
  "link",
  "lock",
  "logging",
  "lost",
  "mcp",
  "message",
  "messages",
  "messaging",
  "monitor",
  "offset",
  "problems",
  "processing",
  "processor",
  "python",
  "queue",
  "receive",
  "receiver",
  "receiving",
  "reconnect",
  "renewal",
  "reset",
  "resolve",
  "sdks",
  "send",
  "service",
  "servicebus",
  "session",
  "slow",
  "subscription",
  "timeout",
  "topic",
  "troubleshoot",
  "troubleshooting",
  "when",
  "with",
]
`;
